lesson 8, computed properties

--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@
                     <img v-bind:src="image" alt="">
                 </div>
                 <div class="product-info">
-                    <h1>{{ product }}</h1>
+                    <h1>{{ title }}</h1>
+
+
                     <p v-if="inStock">Em estoque</p>
                     <p v-else>Sem estoque</p>
 
                     <ul>
                         <li v-for="detail in details">{{ detail }}</li>
                     </ul>
-                    <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)"
+                    <div v-for="(variant, index) in variants" :key="variant.id" @mouseover="upadateVariant(index)"
                         class="color-circle" :style="{backgroundColor: variant.color}">
 
                     </div>
                     <!-- <a :href="url"> Made by Julio Cesar</a> -->
-                    <button class="button" v-on:click="addToCart">Add </button>
-                    <button class="button" v-on:click="removeToCart">Remove</button>
+                    <button class="button" :class="{disabledButton: !inStock}" v-on:click="addToCart"
+                        :disabled="!inStock">Add </button>
+                    <button class="button" :class="{displayNone: !inStock}" v-on:click="removeToCart">Remove</button>
                 </div>
             </div>
         </div>
