--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div id="app">
         <div class="nav-bar"></div>
 
-        <div class="cart"> Cart ({{ cart }})</div>
-        <products-display :premium="premium"></products-display>
+        <div class="cart"> Cart ({{ cart.length }})</div>
+        <products-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeById">
+        </products-display>
     </div>
 
     <script src="./main.js"></script>
