--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 <body>
     <div id="app">
         <div class="nav-bar"></div>
-
         <div class="cart"> Cart ({{ cart.length }})</div>
         <products-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeById">
         </products-display>
     </div>
 
+
     <script src="./main.js"></script>
     <script src="./components/ProductsDisplay.js"></script>
+    <script src="./components/ReviewForm.js"></script>
+    <script src="./components/ReviewList.js"></script>
     <script>
         const mountedApp = app.mount('#app')
     </script>
